fix-creatorPage-audiencePage-walletPage

--- a/src/pages/RoomChat/RoomChat.scss
+++ b/src/pages/RoomChat/RoomChat.scss
@@ -1,7 +1,7 @@
-.roomChat{
-display: flex;
-height: 100%;
-flex-grow: 1;
-font-family: "MediumCereal";
+.roomChat {
+  height: 100vh !important;
+  display: flex;
+  height: 100%;
+  flex-grow: 1;
+  font-family: "MediumCereal";
 }
-
