--- a/src/pages/creator/creator-product/CreatorProduct.scss
+++ b/src/pages/creator/creator-product/CreatorProduct.scss
@@ -2,6 +2,7 @@
   overflow-y: scroll;
   height: 100vh;
   .listArtWork {
+    margin-top: 3em;
     overflow-y: visible;
     height: 100vh;
     &--items {
