--- a/src/pages/WalletPage/WalletPage.scss
+++ b/src/pages/WalletPage/WalletPage.scss
@@ -4,3 +4,37 @@
   justify-content: center;
   margin-top: 30px;
 }
+
+.wallet-section {
+  display: flex;
+  width: 100%;
+  padding: 2em 12em;
+  &__left {
+    width: 50%;
+    img {
+      width: 100%;
+    }
+  }
+  &__right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    &__top {
+      font-family: "MediumCereal";
+      text-align: end;
+      padding-top: 5em;
+      padding-bottom: 2em;
+      h2 {
+        font-size: 1em;
+      }
+      h3 {
+        font-size: 2em;
+      }
+    }
+    &__bottom {
+      margin-top: 5em;
+    }
+  }
+}
