--- a/src/pages/audienceProfile/AudienceProfile.scss
+++ b/src/pages/audienceProfile/AudienceProfile.scss
@@ -1,5 +1,11 @@
 .audience-profile {
-  .creator-profilee {
+  &__profilee {
+    width: 100%;
+    padding: 0 4.5em;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-bottom: none;
   }
   .profileA {
