--- a/src/component/roomChatDetail/RoomChatDetail.scss
+++ b/src/component/roomChatDetail/RoomChatDetail.scss
@@ -63,13 +63,13 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: #b2b2b2;
+      background-color: #75757573;
       /* Màu sắc của "nút cuộn" */
       border-radius: 10px; /* Độ cong của "nút cuộn" */
     }
 
     &::-webkit-scrollbar-track {
-      background-color: #202020; /* Màu sắc của phần nền thanh cuộn */
+      background-color: #e6e6e6; /* Màu sắc của phần nền thanh cuộn */
     }
   }
 
