--- a/src/pages/WalletPage/WalletPage.scss
+++ b/src/pages/WalletPage/WalletPage.scss
@@ -5,36 +5,50 @@
   margin-top: 30px;
 }
 
-.wallet-section {
+.your-wallet-head {
   display: flex;
-  width: 100%;
-  padding: 2em 12em;
-  &__left {
-    width: 50%;
-    img {
-      width: 100%;
-    }
+  align-items: center;
+  margin: 3em 0 2em 2em;
+  h1 {
+    font-family: "BoldCereal";
+    font-size: 1.5em;
+    margin-left: 2em;
   }
-  &__right {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+}
 
-    &__top {
-      font-family: "MediumCereal";
-      text-align: end;
-      padding-top: 5em;
-      padding-bottom: 2em;
-      h2 {
-        font-size: 1em;
-      }
-      h3 {
-        font-size: 2em;
+.wallet-section-wrapper {
+  padding: 2em 12em;
+  .wallet-section {
+    display: flex;
+    width: 100%;
+
+    &__left {
+      width: 50%;
+      img {
+        width: 100%;
       }
     }
-    &__bottom {
-      margin-top: 5em;
+    &__right {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+
+      &__top {
+        font-family: "MediumCereal";
+        text-align: end;
+        padding-top: 5em;
+        padding-bottom: 2em;
+        h2 {
+          font-size: 1.3em;
+        }
+        h3 {
+          font-size: 2em;
+        }
+      }
+      &__bottom {
+        margin-top: 5em;
+      }
     }
   }
 }
