add function create new mod

--- a/src/pages/forgotPassword/ForgotPassword.scss
+++ b/src/pages/forgotPassword/ForgotPassword.scss
@@ -45,7 +45,7 @@
         &__submit {
           width: min-content;
           border-radius: 100px;
-          background-color: #0d0c22;
+          background-color: #0d0c22 !important;
           color: white;
           display: flex;
           justify-content: center;
