--- a/src/component/postView/PostView.scss
+++ b/src/component/postView/PostView.scss
@@ -25,8 +25,8 @@
       margin-bottom: 1em;
 
       img {
-        width: 6%;
-        height: 6%;
+        width: 2.3em;
+        height:2.3em;
         border-radius: 100px;
       }
       &__details {
