--- a/src/component/increment/Increment.scss
+++ b/src/component/increment/Increment.scss
@@ -1,9 +1,10 @@
 .increment {
+  color: black;
   h1 {
     font-size: 4em;
     font-family: "BoldCereal";
   }
   p {
-    font-family: "LightCereal";
+    font-family: "BookCereal";
   }
 }
