--- a/src/component/notification/Notification.scss
+++ b/src/component/notification/Notification.scss
@@ -1,11 +1,11 @@
 .pop-noti {
   &__noti-btn {
     height: min-content !important;
-    padding: 3px 15px 15px 15px;
+    padding: 4px 16px 16px 16px;
     border-radius: 100%;
     background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.489);
-    color: white;
+    border: 1px solid rgba(74, 74, 74, 0.489);
+    color: rgb(121, 121, 121);
     font-size: large;
   }
 }
