--- a/src/component/workartMedia/WorkartMedia.scss
+++ b/src/component/workartMedia/WorkartMedia.scss
@@ -1,11 +1,9 @@
 .workart-media {
-  width: 100%;
-  height: 18em;
-  border-radius: 10px;
+  width: 335px;
+  height: 252px;
   box-shadow: none;
   background-size: cover;
   background-position: center center;
-  margin: 2em 0 0.5em 0;
 }
 
 @media only screen and (max-width: 2000px) {
