add api transaction with role admin

--- a/src/component/transaction-history/TransactionHistory.scss
+++ b/src/component/transaction-history/TransactionHistory.scss
@@ -3,6 +3,7 @@
     font-family: "BoldCereal";
     font-size: 1.5em;
     margin-bottom: 1em;
+    color: #3c3c3c;
   }
   .ant-table-content {
     .ant-table-thead {
