barChart-fixIncrement-revenueTable-fixTransactionTable-AboutUsPage

--- a/src/component/increment/Increment.scss
+++ b/src/component/increment/Increment.scss
@@ -1,10 +1,11 @@
 .increment {
   color: black;
+  text-align: end;
   h1 {
     font-size: 4em;
     font-family: "BoldCereal";
   }
   p {
-    font-family: "BookCereal";
+    font-family: "MediumCereal";
   }
 }
