--- a/src/pages/dashboard/pages/mode/Mode.scss
+++ b/src/pages/dashboard/pages/mode/Mode.scss
@@ -15,4 +15,26 @@
     margin: 0.5em 0;
     gap: 0.5em;
   }
+  &__info {
+    display: flex;
+    h3{
+      font-size: 1.2em;
+      font-family: "MediumCereal";
+      padding: 1em;
+    }
+  }
+  .ant-table-content {
+    .ant-table-thead {
+      .ant-table-cell {
+        background-color: rgb(46, 46, 46);
+        color: rgb(255, 255, 255);
+        font-family: "BoldCereal" !important;
+      }
+    }
+    .ant-table-tbody {
+      .ant-table-cell {
+        font-family: "MediumCereal" !important;
+      }
+    }
+  }
 }
