fix-dasboard-nav

--- a/src/pages/dashboard/layout/side-nav/SideNav.scss
+++ b/src/pages/dashboard/layout/side-nav/SideNav.scss
@@ -32,6 +32,9 @@
     .anticon {
       font-size: 1.5em !important;
     }
+    svg {
+      height: 1.5em;
+    }
   }
   .ant-menu-item,
   .ant-menu-submenu-title {
