--- a/src/sections/workartSection/Workartsection.scss
+++ b/src/sections/workartSection/Workartsection.scss
@@ -1,9 +1,12 @@
 .workart-section {
-  padding: 4.5em;
+  padding: 3em;
   margin-top: 5em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  .ant-col {
+    max-width: fit-content !important;
+  }
   &__title {
     font-family: "UltraLightMonaSans";
     text-align: center;
